syntax = "proto3";

package entity;

option (gogoproto.testgen_all)  = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.goproto_registration) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/elojah/game_03/pkg/entity/entity.proto";

message PC {
    bytes UserID           = 1 [(gogoproto.customtype) = "github.com/elojah/game_03/pkg/ulid.ID", (gogoproto.nullable) = false];
    bytes WorldID          = 2 [(gogoproto.customtype) = "github.com/elojah/game_03/pkg/ulid.ID", (gogoproto.nullable) = false];

    entity.E Entity        = 3 [(gogoproto.nullable) = false];
}
